# fastapi_project

./: .env  auth.py  blog.db  main.py  models.py  pyproject.toml  schema.py  schema2.py  schemas.py
routers/: posts.py
templates/: home.html  home2.html
