[project]
name = "fastapi-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "mypy>=1.20.1",
    "pandas>=3.0.2",
    "pydantic[email]>=2.12.5",
    "pytest>=9.0.3",
    "sqlalchemy>=2.0.49",
]
